--- a/index.html
+++ b/index.html
@@ -3,125 +3,208 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header-menu">
+      <nav class="header-nav-links">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-text">Studio</span></a
+        >
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li>
+            <a href="/" class="link-header">Studio</a>
+          </li>
+          <li>
+            <a href="" class="link-header">Portfolio</a>
+          </li>
+          <li>
+            <a href="" class="link-header">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <address class="address-header">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="link-address"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link-address"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
+    <main>
 
-    <!-- Hero section -->
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-    </section>
+      <section class="business">
+        <h1 class="business-h-one">Effective Solutions for Your Business</h1>
+        <button type="button" class="business-button">Order Service</button>
+      </section>
 
-    <!-- Our Benefits -->
-    <section>
-      <h2>Our Benefits</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
 
-    <!-- Our Team -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/img.webp"
-            alt="Photo of Mark Guerrero"
-            width="264"
-            height="260"
-          />
-          <div>
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </div>
-        </li>
-        <li>
-          <img
-            src="./images/img-1.webp"
-            alt="Photo of Tom Ford"
-            width="264"
-            height="260"
-          />
-          <div>
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </div>
-        </li>
-        <li>
-          <img
-            src="./images/img-2.webp"
-            alt="Photo of Camila Garcia"
-            width="264"
-            height="260"
-          />
-          <div>
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </div>
-        </li>
-        <li>
-          <img
-            src="./images/img-3.webp"
-            alt="Photo of Daniel Wilson"
-            width="264"
-            height="260"
-          />
-          <div>
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </div>
-        </li>
-      </ul>
-    </section>
-    
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <section class="advantages">
+        <h2 class="visually-hidden">our advantages</h2>
+        <ul>
+          <li>
+            <h3 class="advantages-h-three">Strategy</h3>
+            <p class="base-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="advantages-h-three">Punctuality</h3>
+            <p class="base-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="advantages-h-three">Diligence</h3>
+            <p class="base-text">
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="advantages-h-three">Technologies</h3>
+            <p class="base-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="team">
+        <h2 class="base-h-two">Our Team</h2>
+        <ul>
+          <li class="team-card">
+            <img
+              src="./images/img.webp"
+              alt="photo Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3 class="base-h-three align-text">Mark Guerrero</h3>
+            <p class="base-text align-text">Product Designer</p>
+          </li>
+          <li class="team-card">
+            <img
+              src="./images/img-1.webp"
+              alt="photo Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3 class="base-h-three align-text">Tom Ford</h3>
+            <p class="base-text align-text">Frontend Developer</p>
+          </li>
+          <li class="team-card">
+            <img
+              src="./images/img-2.webp"
+              alt="photo Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3 class="base-h-three align-text">Camila Garcia</h3>
+            <p class="base-text align-text">Marketing</p>
+          </li>
+          <li class="team-card">
+            <img
+              src="./images/img-3.webp"
+              alt="photo Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3 class="base-h-three align-text">Daniel Wilson</h3>
+            <p class="base-text align-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="portfolio">
+        <h2 class="base-h-two">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/4.jpg"
+              alt="app for banking"
+              width="360"
+              height="300"
+            />
+            <h3 class="base-h-three">Banking App</h3>
+            <p class="base-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/3.jpg"
+              alt="phone qr code"
+              width="360"
+              height="300"
+            />
+            <h3 class="base-h-three">Cashless Payment</h3>
+            <p class="base-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/2.jpg"
+              alt="notebook and phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="base-h-three">Meditation App</h3>
+            <p class="base-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/1.jpg"
+              alt="phone and car driver"
+              width="360"
+              height="300"
+            />
+            <h3 class="base-h-three">Taxi Service</h3>
+            <p class="base-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/5.jpg"
+              alt="wallpaper for phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="base-h-three">Screen Illustrations</h3>
+            <p class="base-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/6.jpg"
+              alt="girl with phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="base-h-three">Online Courses</h3>
+            <p class="base-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-text-footer">Studio</span></a
+      >
+      <p class="base-text footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
