--- a/index.html
+++ b/index.html
@@ -3,36 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>WebStudio</title>
   </head>
   <body>
     <header class="header-menu">
       <nav class="header-nav-links">
         <a href="./index.html" class="logo"
-          >Web<span class="logo-text">Studio</span></a
+          >Web<span class="logo-accent">Studio</span></a
         >
-        <ul>
+        <ul class="navigation">
           <li>
-            <a href="/" class="link-header">Studio</a>
+            <a href="#" class="nav-link">Studio</a>
           </li>
           <li>
-            <a href="" class="link-header">Portfolio</a>
+            <a href="#" class="nav-link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link-header">Contacts</a>
+            <a href="#" class="nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="address-header">
-        <ul>
+      <address class="address">
+        <ul class="address-list">
           <li>
             <a href="mailto:info@devstudio.com" class="link-address"
               >info@devstudio.com</a
@@ -47,15 +54,15 @@
       </address>
     </header>
     <main>
-
-      <section class="business">
-        <h1 class="business-h-one">Effective Solutions for Your Business</h1>
-        <button type="button" class="business-button">Order Service</button>
+      <!-- Hero section -->
+      <section class="hero-s">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="buttonn">Order Service</button>
       </section>
 
-
+      <!-- Our Benefits section -->
       <section class="advantages">
-        <h2 class="visually-hidden">our advantages</h2>
+        <h2 class="visually-hidden">Our Benefits</h2>
         <ul>
           <li>
             <h3 class="advantages-h-three">Strategy</h3>
@@ -88,6 +95,7 @@
         </ul>
       </section>
 
+      <!-- Our Team section -->
       <section class="team">
         <h2 class="base-h-two">Our Team</h2>
         <ul>
