--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <ul>
           <li class="team-card">
             <img
-              src="./images/img.webp"
+              src="./images/img.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
@@ -111,7 +111,7 @@
           </li>
           <li class="team-card">
             <img
-              src="./images/img-1.webp"
+              src="./images/img-2.jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
@@ -121,7 +121,7 @@
           </li>
           <li class="team-card">
             <img
-              src="./images/img-2.webp"
+              src="./images/img-1.jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
@@ -131,7 +131,7 @@
           </li>
           <li class="team-card">
             <img
-              src="./images/img-3.webp"
+              src="./images/img-3.jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
