--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         >
         <ul class="navigation">
           <li>
-            <a href="#" class="nav-link">Studio</a>
+            <a href="./index.html" class="nav-link">Studio</a>
           </li>
           <li>
-            <a href="#" class="nav-link">Portfolio</a>
+            <a href="" class="nav-link">Portfolio</a>
           </li>
           <li>
-            <a href="#" class="nav-link">Contacts</a>
+            <a href="" class="nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
